// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container DeleteResource should render with proper resourceInfo params 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ConfirmDialog
    cancelAction={Array []}
    header="My header title"
    show={true}
    validateAction={Array []}
>
    <div>
        myLabel
    </div>
</ConfirmDialog>,
  "nodes": Array [
    <ConfirmDialog
      cancelAction={Array []}
      header="My header title"
      show={true}
      validateAction={Array []}
>
      <div>
            myLabel
      </div>
</ConfirmDialog>,
  ],
  "options": Object {
    "context": Object {
      "store": Object {
        "getState": [Function],
      },
    },
  },
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {
        "store": Object {
          "getState": [Function],
        },
      },
      "_currentElement": <Container(DeleteResource)
        form-actions={
                Array [
                        "dialog:delete:cancel",
                        "dialog:delete:validate",
                      ]
        }
        header="My header title"
        params={
                Object {
                        "id": "myResourceID",
                      }
        }
        resourceInfo={
                Object {
                        "resourceType": "myResourceType",
                        "uri": "/myEndpoint",
                      }
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": DeleteResource {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "registry": undefined,
          "store": Object {
            "getState": [Function],
          },
        },
        "getActions": [Function],
        "getLabel": [Function],
        "props": Object {
          "form-actions": Array [
            "dialog:delete:cancel",
            "dialog:delete:validate",
          ],
          "header": "My header title",
          "params": Object {
            "id": "myResourceID",
          },
          "resourceInfo": Object {
            "resourceType": "myResourceType",
            "uri": "/myEndpoint",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ConfirmDialog
          cancelAction={Array []}
          header="My header title"
          show={true}
          validateAction={Array []}
>
          <div>
                    myLabel
          </div>
</ConfirmDialog>,
        "_debugID": 2,
        "_renderedOutput": <ConfirmDialog
          cancelAction={Array []}
          header="My header title"
          show={true}
          validateAction={Array []}
>
          <div>
                    myLabel
          </div>
</ConfirmDialog>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Container(DeleteResource)
    form-actions={
        Array [
            "dialog:delete:cancel",
            "dialog:delete:validate",
          ]
    }
    header="My header title"
    params={
        Object {
            "id": "myResourceID",
          }
    }
    resourceInfo={
        Object {
            "resourceType": "myResourceType",
            "uri": "/myEndpoint",
          }
    }
/>,
}
`;

exports[`Container DeleteResource should render with wrong resourceInfo params 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ConfirmDialog
    cancelAction={Array []}
    header="My header title"
    show={true}
    validateAction={Array []}
>
    <div />
</ConfirmDialog>,
  "nodes": Array [
    <ConfirmDialog
      cancelAction={Array []}
      header="My header title"
      show={true}
      validateAction={Array []}
>
      <div />
</ConfirmDialog>,
  ],
  "options": Object {
    "context": Object {
      "store": Object {
        "getState": [Function],
      },
    },
  },
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {
        "store": Object {
          "getState": [Function],
        },
      },
      "_currentElement": <Container(DeleteResource)
        form-actions={
                Array [
                        "dialog:delete:cancel",
                        "dialog:delete:validate",
                      ]
        }
        header="My header title"
        params={
                Object {
                        "id": "myResourceID",
                      }
        }
        resourceInfo={
                Object {
                        "resourceType": "unknownResourceType",
                        "uri": "/myEndpoint",
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": DeleteResource {
        "_reactInternalInstance": [Circular],
        "context": Object {
          "registry": undefined,
          "store": Object {
            "getState": [Function],
          },
        },
        "getActions": [Function],
        "getLabel": [Function],
        "props": Object {
          "form-actions": Array [
            "dialog:delete:cancel",
            "dialog:delete:validate",
          ],
          "header": "My header title",
          "params": Object {
            "id": "myResourceID",
          },
          "resourceInfo": Object {
            "resourceType": "unknownResourceType",
            "uri": "/myEndpoint",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ConfirmDialog
          cancelAction={Array []}
          header="My header title"
          show={true}
          validateAction={Array []}
>
          <div />
</ConfirmDialog>,
        "_debugID": 4,
        "_renderedOutput": <ConfirmDialog
          cancelAction={Array []}
          header="My header title"
          show={true}
          validateAction={Array []}
>
          <div />
</ConfirmDialog>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Container(DeleteResource)
    form-actions={
        Array [
            "dialog:delete:cancel",
            "dialog:delete:validate",
          ]
    }
    header="My header title"
    params={
        Object {
            "id": "myResourceID",
          }
    }
    resourceInfo={
        Object {
            "resourceType": "unknownResourceType",
            "uri": "/myEndpoint",
          }
    }
/>,
}
`;
